Sat Mar  2 02:45:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* array.c: typo in comment patch by Nami-Doc [Github fixes #253]

Sat Mar  2 01:33:17 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* Merge Onigmo 0fe387da2fee089254f6b04990541c731a26757f
	  v5.13.3 [Bug#7972] [Bug#7974]

Fri Mar  1 11:09:06 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/fileutils.rb:  Revert r34669 which altered the way
	  metaprogramming in FileUtils occurred.  [ruby-trunk - Bug #7958]

	* test/fileutils/visibility_tests.rb:  Refactored tests of FileUtils
	  options modules to expose bug found in #7958
	* test/fileutils/test_dryrun.rb:  ditto.
	* test/fileutils/test_nowrite.rb:  ditto.
	* test/fileutils/test_verbose.rb:  ditto.

Fri Mar  1 09:18:00 2013  Zachary Scott <zachary@zacharyscott.net>

	* lib/psych.rb: specify in rdoc what object is returned in parser
	  By Adam Stankiewicz [Github tenderlove/psych#133]

Fri Mar  1 07:21:41 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/ext/builder.rb:  Fix incompatibilities when installing
	  extensions.  Patch by Nobu.
	  [ruby-trunk - Bug #7698] [ruby-trunk - Bug #7971]
	* lib/rubygems/ext/ext_conf_builder.rb:  ditto.
	* lib/rubygems/installer.rb:  ditto.
	* test/rubygems/test_gem_ext_ext_conf_builder.rb:  Test for the above.
	* test/rubygems/test_gem_installer.rb:  ditto.

	* lib/rubygems/commands/sources_command.rb:  Prefer HTTPS over HTTP.
	* lib/rubygems/defaults.rb:  ditto
	* lib/rubygems/dependency_resolver.rb:  Ditto.
	* lib/rubygems/source.rb:  ditto.
	* lib/rubygems/spec_fetcher.rb:  ditto.
	* lib/rubygems/specification.rb:  ditto.
	* lib/rubygems/test_utilities.rb:  ditto.
	* test/rubygems/test_gem.rb:  Test for the above.
	* test/rubygems/test_gem_commands_sources_command.rb:  ditto.
	* test/rubygems/test_gem_dependency_resolver_api_set.rb:  ditto.
	* test/rubygems/test_gem_remote_fetcher.rb:  ditto.
	* test/rubygems/test_gem_source.rb:  ditto.
	* test/rubygems/test_gem_spec_fetcher.rb:  ditto.
